Encadrés : done ! Panneaux promo v. 1

--- a/index.html
+++ b/index.html
@@ -59,13 +59,18 @@
 		<img class="imagePrincipale" src="assets/image/medium-principale-2.jpg" alt="Table vu de haut avec de beaux plats remplis de nourriture">		        
 	</header>
 	
-	<div class="botanique-container">
-		<section class="txtBotanique">
-			<h2>Botanique et décadente</h2>
-			<p>Le concept de « Vedge » s’inscrit dans la vision de l’alimentation. Il reflète notre volonté de ralentir la cadence, d’offrir des plats sains à une clientèle soucieuse de son bien-être et de l’environnement. Une clientèle hédoniste qui mange avec plaisir et de façon responsable.</p>
-		</section>
-		<img class="imgBotanique" src="assets/image/botanique-decadent.jpg" alt="Mon image">
-	</div>
+	<section class="encadre">
+		<div class="contenu deux-panneaux">
+			<picture>
+				<img class="imgBotanique" src="assets/image/botanique-decadent.jpg" alt="Mon image">
+			</picture>
+
+			<div class="panneau-texte">
+				<h2>Botanique et décadente</h2>
+				<p>Le concept de « Vedge » s’inscrit dans la vision de l’alimentation. Il reflète notre volonté de ralentir la cadence, d’offrir des plats sains à une clientèle soucieuse de son bien-être et de l’environnement. Une clientèle hédoniste qui mange avec plaisir et de façon responsable.</p>
+			</div>			
+		</div>
+	</section>
 	
 	<section>
 		<header>
@@ -73,38 +78,47 @@
 			<p>Régalez-vous en bonne conscience !</p>
 		</header>
 		<div class="grille">
-			<div>
+			<article>
 				<h4>Menu du jour</h4>
 				<p>Du lundi au vendredi, de 11h à 15h</p>
-				<img class="lien" src="assets/image/lunch.jpg" alt="Mon image">
-			</div>
-			<div>
+				<img class="focus-bas" src="assets/image/lunch.jpg" alt="Mon image">
+				<button class="bouton-reserve">En savoir plus</button>
+			</article>
+
+			<article>
 				<h4>Menu du soir</h4>
 				<p>Du mardi au dimanche soir</p>
-				<img class="lien" src="assets/image/menu1.jpg" alt="Mon image">
-			</div>
-			<div>
+				<img src="assets/image/menu1.jpg" alt="Mon image">
+				<button class="bouton-reserve">En savoir plus</button>
+			</article>
+
+			<article>
 				<h4>Menu brunch</h4>
 				<p>Samedi et dimanche de 10h à 15h</p>
-				<img class="lien" src="assets/image/menu-dej.jpg" alt="Mon image">
-			</div>
-			<div>
+				<img src="assets/image/menu-dej.jpg" alt="Mon image">
+				<button class="bouton-reserve">En savoir plus</button>
+			</article>
+
+			<article>
 				<h4>Menu boissons</h4>
 				<p>Vins biologiques et botaniques</p>
-				<img class="lien" src="assets/image/menu-drink2.jpg" alt="Mon image">
-			</div>
-			<div>
+				<img src="assets/image/menu-drink2.jpg" alt="Mon image">
+				<button class="bouton-reserve">En savoir plus</button>
+			</article>
+
+			<article>
 				<h4>Menu pour emporter</h4>
 				<p>Emballage écologique</p>
 				<img src="assets/image/menu-takeout.jpg" alt="Mon image">
 				<button class="bouton-reserve">Commande en ligne</button>
-			</div>
-			<div>
+			</article>
+
+			<article>
 				<h4>Vous souhaitez réserver?</h4>
 				<p>N'attendez pas trop !</p>
-				<img src="assets/image/reserved.jpg" alt="Mon image">
+				<img class="focus-bas" src="assets/image/reserved.jpg" alt="Mon image">
 				<button class="bouton-reserve">Réservez en ligne</button>
-			</div>
+			</article>
 		</div>
 	</section>
 	
@@ -113,79 +127,79 @@
 			<h2>Restaurants en vedette&nbsp;!</h2>
 		</header>
 		<div class="grille">
-			<article>
-				<div>
-					<h3>Vedge Trois-Rivière</h3>
-					<img src="assets/image/resto2.jpg" alt="Mon image">
-					<button class="bouton-reserve">En savoir plus</button>
-				</div>
+			<article>				
+				<h3>Vedge Trois-Rivière</h3>
+				<img src="assets/image/resto2.jpg" alt="Mon image">
+				<button class="bouton-reserve">En savoir plus</button>
 			</article>
+			
 			<article>
-				<div>
-					<h3>Vedge Val-Jalbert</h3>
-					<img src="assets/image/resto3.jpg" alt="Mon image">
-					<button class="bouton-reserve">En savoir plus</button>
-				</div>
+				<h3>Vedge Val-Jalbert</h3>
+				<img class="focus-bas" src="assets/image/resto3.jpg" alt="Mon image">
+				<button class="bouton-reserve">En savoir plus</button>
 			</article>
+			
 			<article>
-				<div>
-					<h3>Drummondville</h3>
-					<img src="assets/image/resto1.jpg" alt="Mon image">
-					<button class="bouton-reserve">En savoir plus</button> 
-				</div>
+				<h3>Drummondville</h3>
+				<img class="focus-haut" src="assets/image/resto1.jpg" alt="Mon image">
+				<button class="bouton-reserve">En savoir plus</button> 
 			</article>
+			
 			<article>
-				<div>
-					<h3>Vedge Dix-30</h3>
-					<img src="assets/image/resto5.jpg" alt="Mon image">
-					<button class="bouton-reserve">En savoir plus</button>
-				</div>
+				<h3>Vedge Dix-30</h3>
+				<img src="assets/image/resto5.jpg" alt="Mon image">
+				<button class="bouton-reserve">En savoir plus</button>
 			</article>
+			
 			<article>
-				<div>
-					<h3>Vedge Boston</h3>
-					<img src="assets/image/resto6.jpg" alt="Mon image">
-					<button class="bouton-reserve">En savoir plus</button>
-				</div>
+				<h3>Vedge Boston</h3>
+				<img src="assets/image/resto6.jpg" alt="Mon image">
+				<button class="bouton-reserve">En savoir plus</button>
 			</article>
+			
 			<article>
-				<div>
-					<h3>Vedge Berlin </h3>
-					<img src="assets/image/resto7.jpg" alt="Mon image">
-					<button class="bouton-reserve">En savoir plus</button>
-				</div>
-				
+				<h3>Vedge Berlin </h3>
+				<img src="assets/image/resto7.jpg" alt="Mon image">
+				<button class="bouton-reserve">En savoir plus</button>
 			</article>
 		</div>
 	</section>
 	
 	<div>
 		<div class="grille">
-			<article>
+			<article class="deux-panneaux">
 				<h2>Profitez de nos promotions</h2>
-				<p>Deux Mimosas pour 15$ pendant toute l’heure du brunch</p>
-				<img class="zoom" src="assets/image/mimosas.jpg" alt="Mon image">
-				<button id="bouton-promo" class="bouton-reserve">Voir nos promotions</button>
+				<picture>
+					<img src="assets/image/mimosas.jpg" alt="Mon image">
+				</picture>
+				
+				<div class="panneau-texte">					
+					<p>Deux Mimosas pour 15$ pendant toute l’heure du brunch</p>
+					<button id="bouton-promo" class="bouton-reserve">Voir nos promotions</button>
+				</div>				
 			</article>
 			<article>
 				<h2>Trouvez un resto Vedge</h2>
 				<p>Entrez votre ville ou votre code postal :</p>
-				<img class="zoom" src="assets/image/Trouvez.jpg" alt="Mon image">
+				<img src="assets/image/Trouvez.jpg" alt="Mon image">
 				<input type="search" id="site-search">
 				<button id="bouton-site" class="bouton-reserve">Rechercher</button>
 			</article>
 		</div>
 	</div>
 	
-	<div class="franchise">
-		<div class="franchise-container">
-			<section class="txtfranchise">
-				<h2>Voulez-vous établir votre propre restaurant?</h2>
+	<section class="encadre">
+		<div class="contenu">
+			<picture>
+				<img src="assets/image/franchise.jpeg" alt="Mon image">
+			</picture>
+			
+			<div class="panneau-texte">
+				<h2>Voulez-vous établir votre propre restaurant&nbsp;?</h2>
 				<button class="bouton-reserve">Parlez à un représentant</button>
-			</section>
-			<img class="imgfranchise" src="assets/image/franchise.jpeg" alt="Mon image">
+			</div>			
 		</div>
-	</div>
+	</section>
 	
 	<footer>
 		<nav class="navigation">
