Footer : done. Polices fluides : start

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=El+Messiri:wght@400;500;600;700&family=Fredericka+the+Great&display=swap" rel="stylesheet">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
 	
 </head>
 <body>
@@ -82,42 +82,42 @@
 				<h4>Menu du jour</h4>
 				<p>Du lundi au vendredi, de 11h à 15h</p>
 				<img class="focus-bas" src="assets/image/lunch.jpg" alt="Mon image">
-				<button class="bouton-reserve">En savoir plus</button>
+				<a class="cta" href="#">En savoir plus</a>
 			</article>
 
 			<article>
 				<h4>Menu du soir</h4>
 				<p>Du mardi au dimanche soir</p>
 				<img src="assets/image/menu1.jpg" alt="Mon image">
-				<button class="bouton-reserve">En savoir plus</button>
+				<a class="cta" href="#">En savoir plus</a>
 			</article>
 
 			<article>
 				<h4>Menu brunch</h4>
 				<p>Samedi et dimanche de 10h à 15h</p>
 				<img src="assets/image/menu-dej.jpg" alt="Mon image">
-				<button class="bouton-reserve">En savoir plus</button>
+				<a class="cta" href="#">En savoir plus</a>
 			</article>
 
 			<article>
 				<h4>Menu boissons</h4>
 				<p>Vins biologiques et botaniques</p>
 				<img src="assets/image/menu-drink2.jpg" alt="Mon image">
-				<button class="bouton-reserve">En savoir plus</button>
+				<a class="cta" href="#">En savoir plus</a>
 			</article>
 
 			<article>
 				<h4>Menu pour emporter</h4>
 				<p>Emballage écologique</p>
 				<img src="assets/image/menu-takeout.jpg" alt="Mon image">
-				<button class="bouton-reserve">Commandez en ligne</button>
+				<a class="cta" href="#">Commandez en ligne</a>
 			</article>
 
 			<article>
 				<h4>Vous souhaitez réserver?</h4>
 				<p>N'attendez pas trop !</p>
 				<img class="focus-bas" src="assets/image/reserved.jpg" alt="Mon image">
-				<button class="bouton-reserve">Réservez en ligne</button>
+				<a class="cta" href="#">Réservez en ligne</a>
 			</article>
 		</div>
 	</section>
@@ -130,37 +130,37 @@
 			<article>				
 				<h3>Vedge Trois-Rivière</h3>
 				<img src="assets/image/resto2.jpg" alt="Mon image">
-				<button class="bouton-reserve">En savoir plus</button>
+				<a class="cta" href="#">En savoir plus</a>
 			</article>
 			
 			<article>
 				<h3>Vedge Val-Jalbert</h3>
 				<img class="focus-bas" src="assets/image/resto3.jpg" alt="Mon image">
-				<button class="bouton-reserve">En savoir plus</button>
+				<a class="cta" href="#">En savoir plus</a>
 			</article>
 			
 			<article>
 				<h3>Drummondville</h3>
 				<img class="focus-haut" src="assets/image/resto1.jpg" alt="Mon image">
-				<button class="bouton-reserve">En savoir plus</button> 
+				<a class="cta" href="#">En savoir plus</a> 
 			</article>
 			
 			<article>
 				<h3>Vedge Dix-30</h3>
 				<img src="assets/image/resto5.jpg" alt="Mon image">
-				<button class="bouton-reserve">En savoir plus</button>
+				<a class="cta" href="#">En savoir plus</a>
 			</article>
 			
 			<article>
 				<h3>Vedge Boston</h3>
 				<img src="assets/image/resto6.jpg" alt="Mon image">
-				<button class="bouton-reserve">En savoir plus</button>
+				<a class="cta" href="#">En savoir plus</a>
 			</article>
 			
 			<article>
 				<h3>Vedge Berlin </h3>
 				<img src="assets/image/resto7.jpg" alt="Mon image">
-				<button class="bouton-reserve">En savoir plus</button>
+				<a class="cta" href="#">En savoir plus</a>
 			</article>
 		</div>
 	</section>
@@ -176,7 +176,7 @@
 				
 				<div class="panneau-texte">					
 					<p>Deux Mimosas pour 15$ pendant toute l’heure du brunch</p>
-					<button class="bouton-reserve">Voir nos promotions</button>
+					<a class="cta" href="#">Voir nos promotions</a>
 				</div>				
 			</article>
 			<article class="promo deux-panneaux">
@@ -188,55 +188,52 @@
 				
 				<div class="panneau-texte">
 					<label for="input-recherche-succursale">Entrez votre ville ou votre code postal&nbsp;:</label>
-					<input type="search" id="input-recherche-succursale">
-					<button class="bouton-reserve">Rechercher</button>
+					<input type="search" id="input-recherche-succursale" placeholder="Code postal ou ville">
+					<button type="button">Rechercher</a>
 				</div>				
 			</article>
 		</div>
 	</div>
 	
 	<section class="encadre">
-		<div class="contenu">
+		<div class="contenu deux-panneaux">
 			<picture>
 				<img src="assets/image/franchise.jpeg" alt="Mon image">
 			</picture>
 			
 			<div class="panneau-texte">
 				<h2>Voulez-vous établir votre propre restaurant&nbsp;?</h2>
-				<button class="bouton-reserve">Parlez à un représentant</button>
+				<a class="cta" href="#">Parlez à un représentant</a>
 			</div>			
 		</div>
 	</section>
 	
 	<footer>
-		<nav class="navigation">
-			<div class="menu menu_secondaire">
-				<ul>
-					<li><a href="#"><strong>Mobile app</strong></a></li>
-					<li><a href="#"><strong>FAQ</strong></a></li>
-					<li><a href="#"><strong>Franchise</strong></a></li>
-				</ul>
-				<ul>
-					<li><a href="#"><strong>Presse</strong></a></li>
-					<li><a href="#"><strong>Carrières</strong></a></li>
-					<li><a href="#"><strong>Contact</strong></a></li>
-				</ul>
-			</div>
+		<div class="adresse">
+			<img class="logo" src="assets/image/vedge_logo.png" alt="Logo des restaurants Vedge">
+			<address>
+				Adresse Vedge<br>
+				500 rue de la Montagne<br>
+				Y2H 16K<br>
+				514-123-1234</p>
+			</address>
+		</div>
+
+		<nav aria-label="navigation-secondaire">
+			<ul class="menu menu_secondaire">
+				<li><a href="#"><strong>Application mobile</strong></a></li>
+				<li><a href="#"><strong>FAQ</strong></a></li>
+				<li><a href="#"><strong>Franchise</strong></a></li>
+				<li><a href="#"><strong>Presse</strong></a></li>
+				<li><a href="#"><strong>Carrières</strong></a></li>
+				<li><a href="#"><strong>Contact</strong></a></li>
+			</ul>		
 		</nav>
 		
-		<div class="adresse">
-			<div class="rue">
-				<p>Adresse Vedge <br> 500 rue de la Montagne <br> Y2H16K <br> 514-123-1234</p>
-			</div>
-			<div class="img_logo">
-				<img class="logo-footer" src=assets/image/vedge_logo.png alt="logo">
-			</div>
-			<div class="infolettre">
-				<label class="Infolettre">Infolettre</label>
-				<input class="mail-search" type="search" value="Adresse mail">
-				<button id="bouton-courriel" class="bouton-reserve">Inscrivez-vous</button>
-			</div>
-			
+		<div class="infolettre">
+			<label class="Infolettre">Abonnez-vous à notre infolettre&nbsp;!</label>
+			<input class="mail-search" type="email" placeholder="exemple@vedge.com">
+			<button type="button">Inscrivez-vous</button>
 		</div>
 	</footer>
 	
