Polices fluides: rework start

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 			</picture>
 			
 			<div class="panneau-texte">
-				<h2>Voulez-vous établir votre propre restaurant&nbsp;?</h2>
+				<h3>Voulez-vous établir votre propre restaurant&nbsp;?</h3>
 				<a class="cta" href="#">Parlez à un représentant</a>
 			</div>			
 		</div>
@@ -221,7 +221,7 @@
 
 		<nav aria-label="navigation-secondaire">
 			<ul class="menu menu_secondaire">
-				<li><a href="#"><strong>Application mobile</strong></a></li>
+				<li><a href="#"><strong>App mobile</strong></a></li>
 				<li><a href="#"><strong>FAQ</strong></a></li>
 				<li><a href="#"><strong>Franchise</strong></a></li>
 				<li><a href="#"><strong>Presse</strong></a></li>
