--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 				<nav class="navigation">
 					<img class="logo" src=assets/image/vedge_logo.png alt="logo">
 					<ul class="navigation-principale">
-						<li><a href="#"><strong>Le Restaurant</strong></a></li>
-						<li><a href="#"><strong>Chefs & Cuisine</strong></a></li>
-						<li><a href="#"><strong>Menu</strong></a></li>
-						<li><a href="#"><strong>Nos locations</strong></a>
+						<li><a href="#">Le Restaurant</a></li>
+						<li><a href="#">Chefs & Cuisine</a></li>
+						<li><a href="#">Menu</a></li>
+						<li><a href="#">Nos locations</a>
 							<ul>
 								<li><a href="#">Trois-Rivières</a></li>
 								<li><a href="#">Drummonville</a></li>
@@ -39,8 +39,8 @@
 								<li><a href="#">Berlin</a></li>
 							</ul>
 						</li>
-						<li><a href="#"><strong>Réservations</strong></a></li>
-						<li><a href="#"><strong>Commander en ligne</strong></a></li>
+						<li><a href="#">Réservations</a></li>
+						<li><a href="#">Commander en ligne</a></li>
 					</ul>
 					
 					<ul class="selection-langue">
@@ -59,6 +59,56 @@
 		<img class="imagePrincipale" src="assets/image/medium-principale-2.jpg" alt="Table vu de haut avec de beaux plats remplis de nourriture">		        
 	</header>
 	
+	<section>
+		<header>
+			<h2>Menus</h2>
+			<p>Régalez-vous en bonne conscience !</p>
+		</header>
+		<div class="grille">
+			<article>
+				<h3>Menu du jour</h3>
+				<p>Du lundi au vendredi, de 11h à 15h</p>
+				<img class="focus-bas" src="assets/image/lunch.jpg" alt="Mon image">
+				<a class="cta" href="#">En savoir plus</a>
+			</article>
+
+			<article>
+				<h3>Menu du soir</h3>
+				<p>Du mardi au dimanche soir</p>
+				<img src="assets/image/menu1.jpg" alt="Mon image">
+				<a class="cta" href="#">En savoir plus</a>
+			</article>
+
+			<article>
+				<h3>Menu brunch</h3>
+				<p>Samedi et dimanche de 10h à 15h</p>
+				<img src="assets/image/menu-dej.jpg" alt="Mon image">
+				<a class="cta" href="#">En savoir plus</a>
+			</article>
+
+			<article>
+				<h3>Menu boissons</h3>
+				<p>Vins biologiques et botaniques</p>
+				<img src="assets/image/menu-drink2.jpg" alt="Mon image">
+				<a class="cta" href="#">En savoir plus</a>
+			</article>
+
+			<article>
+				<h3>Menu pour emporter</h3>
+				<p>Emballage écologique</p>
+				<img src="assets/image/menu-takeout.jpg" alt="Mon image">
+				<a class="cta" href="#">Commandez en ligne</a>
+			</article>
+
+			<article>
+				<h3>Vous souhaitez réserver?</h3>
+				<p>N'attendez pas trop !</p>
+				<img class="focus-bas" src="assets/image/reserved.jpg" alt="Mon image">
+				<a class="cta" href="#">Réservez en ligne</a>
+			</article>
+		</div>
+	</section>
+
 	<section class="encadre">
 		<div class="contenu deux-panneaux">
 			<picture>
@@ -69,56 +119,6 @@
 				<h2>Botanique et décadente</h2>
 				<p>Le concept de « Vedge » s’inscrit dans la vision de l’alimentation. Il reflète notre volonté de ralentir la cadence, d’offrir des plats sains à une clientèle soucieuse de son bien-être et de l’environnement. Une clientèle hédoniste qui mange avec plaisir et de façon responsable.</p>
 			</div>			
-		</div>
-	</section>
-	
-	<section>
-		<header>
-			<h2>Menus</h2>
-			<p>Régalez-vous en bonne conscience !</p>
-		</header>
-		<div class="grille">
-			<article>
-				<h4>Menu du jour</h4>
-				<p>Du lundi au vendredi, de 11h à 15h</p>
-				<img class="focus-bas" src="assets/image/lunch.jpg" alt="Mon image">
-				<a class="cta" href="#">En savoir plus</a>
-			</article>
-
-			<article>
-				<h4>Menu du soir</h4>
-				<p>Du mardi au dimanche soir</p>
-				<img src="assets/image/menu1.jpg" alt="Mon image">
-				<a class="cta" href="#">En savoir plus</a>
-			</article>
-
-			<article>
-				<h4>Menu brunch</h4>
-				<p>Samedi et dimanche de 10h à 15h</p>
-				<img src="assets/image/menu-dej.jpg" alt="Mon image">
-				<a class="cta" href="#">En savoir plus</a>
-			</article>
-
-			<article>
-				<h4>Menu boissons</h4>
-				<p>Vins biologiques et botaniques</p>
-				<img src="assets/image/menu-drink2.jpg" alt="Mon image">
-				<a class="cta" href="#">En savoir plus</a>
-			</article>
-
-			<article>
-				<h4>Menu pour emporter</h4>
-				<p>Emballage écologique</p>
-				<img src="assets/image/menu-takeout.jpg" alt="Mon image">
-				<a class="cta" href="#">Commandez en ligne</a>
-			</article>
-
-			<article>
-				<h4>Vous souhaitez réserver?</h4>
-				<p>N'attendez pas trop !</p>
-				<img class="focus-bas" src="assets/image/reserved.jpg" alt="Mon image">
-				<a class="cta" href="#">Réservez en ligne</a>
-			</article>
 		</div>
 	</section>
 	
@@ -189,7 +189,7 @@
 				<div class="panneau-texte">
 					<label for="input-recherche-succursale">Entrez votre ville ou votre code postal&nbsp;:</label>
 					<input type="search" id="input-recherche-succursale" placeholder="Code postal ou ville">
-					<button type="button">Rechercher</a>
+					<button type="button">Rechercher</button>
 				</div>				
 			</article>
 		</div>
@@ -202,7 +202,7 @@
 			</picture>
 			
 			<div class="panneau-texte">
-				<h3>Voulez-vous établir votre propre restaurant&nbsp;?</h3>
+				<h2>Voulez-vous établir votre propre restaurant&nbsp;?</h2>
 				<a class="cta" href="#">Parlez à un représentant</a>
 			</div>			
 		</div>
@@ -215,18 +215,18 @@
 				Adresse Vedge<br>
 				500 rue de la Montagne<br>
 				Y2H 16K<br>
-				514-123-1234</p>
+				514-123-1234
 			</address>
 		</div>
 
 		<nav aria-label="navigation-secondaire">
 			<ul class="menu menu_secondaire">
-				<li><a href="#"><strong>App mobile</strong></a></li>
-				<li><a href="#"><strong>FAQ</strong></a></li>
-				<li><a href="#"><strong>Franchise</strong></a></li>
-				<li><a href="#"><strong>Presse</strong></a></li>
-				<li><a href="#"><strong>Carrières</strong></a></li>
-				<li><a href="#"><strong>Contact</strong></a></li>
+				<li><a href="#">App mobile</a></li>
+				<li><a href="#">FAQ</a></li>
+				<li><a href="#">Franchise</a></li>
+				<li><a href="#">Presse</a></li>
+				<li><a href="#">Carrières</a></li>
+				<li><a href="#">Contact</a></li>
 			</ul>		
 		</nav>
 		
